Restructured the db migrations

--- a/TeleAfiaPersonal.Api/appsettings.json
+++ b/TeleAfiaPersonal.Api/appsettings.json
@@ -13,6 +13,6 @@
     "ExpiryMinutes": 60
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DRWILSON\\SQLEXPRESS;Initial Catalog=TeleAfiaPersonal;Integrated Security=True;Trust Server Certificate=True"
+    "DefaultConnection": "server=DRWILSON\\SQLEXPRESS;Initial Catalog=TeleAfiaPersonal;Integrated Security=True;Trust Server Certificate=True"
   }
 }
