--- a/TeleAfiaPersonal.Contracts/TeleAfiaPersonal.Contracts.csproj
+++ b/TeleAfiaPersonal.Contracts/TeleAfiaPersonal.Contracts.csproj
@@ -12,4 +12,8 @@
     <None Remove="Services\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MimeKit" Version="4.6.0" />
+  </ItemGroup>
+
 </Project>
