--- a/TeleAfiaPersonal.Api/appsettings.json
+++ b/TeleAfiaPersonal.Api/appsettings.json
@@ -13,11 +13,11 @@
     "ExpiryMinutes": 60
   },
   "EmailConfiguration": {
-    "From": "teleafya2024@gmail.com",
+    "From": "*********@gmail.com",
     "SmtpServer": "smtp.gmail.com",
     "Port": 587,
-    "UserName": "teleafya2024@gmail.com",
-    "Password": "ynga burg davd wmfw"
+    "UserName": "********@gmail.com",
+    "Password": "**********"
   },
   "ConnectionStrings": {
     "DefaultConnection": "server=DRWILSON\\SQLEXPRESS;Initial Catalog=TeleAfiaPersonal;Integrated Security=True;Trust Server Certificate=True"
